#800 - checkbox wrapping fix, code structure has been modified, design, settings.appearance implementation

--- a/src/scss/_app-global.scss
+++ b/src/scss/_app-global.scss
@@ -186,6 +186,14 @@ a {
   overflow: hidden;
 }
 
+.app-checkbox-wrapper {
+  .mat-mdc-checkbox {
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+  }  
+}
+
 
 // fieldset
 fieldset {
